fix: h2 letter spacing

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -52,7 +52,6 @@ section {
 
 .section-header h2 {
   font-size: 48px;
-  letter-spacing: 1.15em;
   font-weight: 700;
   margin: 0;
   color: #ff386f;
